# Inside of setup.cfg
[metadata]
name = oui
description = Highly reusable UI components for sound recognition
root_url = https://github.com/otosense
author = Otosense
license = Apache Software License
description-file = README.md
install_requires =
    argh
keywords =
    User Interface
    UI
    sound recognition