[metadata]
name = oui
version = 0.3.3
url = https://github.com/i2mint/oui
platforms = any
description_file = README.md
description = There is a bit of an air of mystery around this project...
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		User Interface
		UI
		sound recognition
display_name = oui

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	argh